--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,18 @@
 server {
+    # Прослушивание HTTP порта
     listen 80;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
+
+    # Для настройки прямого SSL (без Cloudflare) раскомментируйте блок ниже
+    # и создайте файлы сертификатов в контейнере
+    # listen 443 ssl;
+    # ssl_certificate /etc/nginx/ssl/ssl.crt;
+    # ssl_certificate_key /etc/nginx/ssl/ssl.key;
+    # ssl_protocols TLSv1.2 TLSv1.3;
+    # ssl_prefer_server_ciphers on;
+    # ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 
     # Gzip Settings
     gzip on;
