--- a/nginx.conf
+++ b/nginx.conf
@@ -49,15 +49,59 @@ server {
         text/x-component
         text/x-cross-domain-policy;
 
+    # Brotli Settings
+    brotli on;
+    brotli_comp_level 6;
+    brotli_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/ld+json
+        application/manifest+json
+        application/rss+xml
+        application/vnd.geo+json
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/bmp
+        image/svg+xml
+        image/x-icon
+        text/cache-manifest
+        text/css
+        text/plain
+        text/vcard
+        text/vnd.rim.location.xloc
+        text/vtt
+        text/x-component
+        text/x-cross-domain-policy;
+
     # Кеширование статических файлов
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        access_log off;
+        tcp_nodelay off;
+        open_file_cache max=1000 inactive=20s;
+        open_file_cache_valid 30s;
+        open_file_cache_min_uses 2;
+        open_file_cache_errors on;
+    }
+
+    # Кеширование HTML
+    location ~* \.html$ {
+        expires 1h;
+        add_header Cache-Control "public, no-cache";
     }
 
     # Все запросы маршрутизируем на index.html для SPA
     location / {
         try_files $uri $uri/ /index.html;
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
     }
 
     # Ошибки 404
@@ -66,6 +110,12 @@ server {
     # Запрещаем доступ к скрытым файлам
     location ~ /\. {
         deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Отключаем логи для статических файлов
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         access_log off;
         log_not_found off;
     }
