Удалены версии из docker-compose файлов и добавлены настройки SSL для Nginx, включая редирект на HTTPS и увеличенные таймауты. Обновлены инструкции в setup.sh для проверки конфигурации Nginx и настройки безопасности.

--- a/admin/nginx.conf
+++ b/admin/nginx.conf
@@ -1,7 +1,29 @@
 server {
     listen 80;
+    listen [::]:80;
     server_name admin.alextrans.a-t-group.ru;
+    
+    # Редирект на HTTPS
+    return 301 https://$host$request_uri;
+}
 
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name admin.alextrans.a-t-group.ru;
+    
+    # SSL сертификаты Cloudflare Origin
+    ssl_certificate /etc/ssl/cloudflare/a-t-group.ru/cert.pem;
+    ssl_certificate_key /etc/ssl/cloudflare/a-t-group.ru/key.pem;
+    
+    # Оптимальные настройки SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # Прокси на Strapi
     location / {
         proxy_pass http://localhost:1337;
         proxy_http_version 1.1;
@@ -12,5 +34,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Увеличенные таймауты для первоначальной загрузки
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
     }
 } 
