--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,15 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      # Маппинг портов 8080:80 для работы через nginx reverse proxy
+      # Маппинг на порт 8080, так как порт 80 уже занят
       - "8080:80"
+      # Порт для HTTPS, раскомментируйте при настройке SSL
       # - "443:443"
     volumes:
       - /etc/ssl/cloudflare/a-t-group.ru:/etc/ssl/cloudflare/a-t-group.ru:ro
     environment:
       - VITE_TELEGRAM_BOT_TOKEN=${VITE_TELEGRAM_BOT_TOKEN}
       - VITE_TELEGRAM_CHAT_ID=${VITE_TELEGRAM_CHAT_ID}
+      - VITE_STRAPI_URL=https://strapi.a-t-group.ru
     restart: unless-stopped
-    # Опционально: можно добавить имя контейнера для удобства
-    # container_name: alextrans_app 
+    container_name: alextrans_app 
